--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       align-items: center;
       justify-content: center;
       flex-direction: column;
+      position: relative; /* Asegura que los botones se posicionen en relación con el contenedor */
     }
 
     canvas {
@@ -46,6 +47,9 @@
       background-color: white;
       border: none;
       cursor: pointer;
+      position: absolute; /* Posiciona los botones absolutamente */
+      top: 50%; /* Centra verticalmente en el contenedor */
+      transform: translateY(-50%); /* Ajusta el botón para centrarlo verticalmente */
     }
 
     button:hover {
@@ -58,39 +62,62 @@
       cursor: pointer;
     }
 
+    #emojiSelection {
+      display: flex;
+      gap: 10px;
+    }
+
+    label {
+      color: white;
+    }
+
+    input[type="radio"] {
+      margin-right: 5px;
+    }
+
+    #goToOtherPageButton {
+      left: 5%; /* Ajusta la distancia desde el borde izquierdo del contenedor */
+    }
+
+    #goToOtherPage2Button {
+      right: 5%; /* Ajusta la distancia desde el borde derecho del contenedor */
+    }
+
   </style>
 </head>
 <body>
   <div class="score">PUNTOOOOS: 0</div>
   <canvas width="400" height="400" id="game"></canvas>
   <div class="game-over">PERDISTEEEE! PONE TU NOMBRE, SELECCIONA UN EMOTICON Y APRETA ENVIAR.</div>
-  <input type="text" id="nameInput" placeholder="Enter your name">
+  <input type="text" id="nameInput" placeholder="PONER NOMBRE ACA (EL TUYO)">
   
-<style>
-  #emojiSelection {
-    display: flex;
-    gap: 10px;
-  }
+  <style>
+    #emojiSelection {
+      display: flex;
+      gap: 10px;
+    }
 
-  label {
-    color: white;
-  }
+    label {
+      color: white;
+    }
 
-  input[type="radio"] {
-    margin-right: 5px;
-  }
-</style>
+    input[type="radio"] {
+      margin-right: 5px;
+    }
+  </style>
 
-<div id="emojiSelection">
-  <label for="sunEmoji">
-    <input type="radio" id="sunEmoji" name="emoji" value="Sol"> Sol
-  </label>
-  <label for="avocadoEmoji">
-    <input type="radio" id="avocadoEmoji" name="emoji" value="Palta"> Palta
-  </label>
-</div>
+  <div id="emojiSelection">
+    <label for="sunEmoji">
+      <input type="radio" id="sunEmoji" name="emoji" value="Sol"> Sol
+    </label>
+    <label for="avocadoEmoji">
+      <input type="radio" id="avocadoEmoji" name="emoji" value="Palta"> Palta
+    </label>
+  </div>
   
   <button id="restartButton">ENVIAR</button>
+  <button id="goToOtherPageButton">VER PUNTAJE DE SOL</button>
+  <button id="goToOtherPage2Button">VER PUNTAJE DE PALTA</button>
   
   <script>
     var canvas = document.getElementById('game');
@@ -100,8 +127,11 @@
     var nameInput = document.getElementById('nameInput');
     var emojiSelection = document.getElementById('emojiSelection');
     var restartButton = document.getElementById('restartButton');
+    var goToOtherPageButton = document.getElementById('goToOtherPageButton');
+    var goToOtherPage2Button = document.getElementById('goToOtherPage2Button');
     var selectedEmoji = null;
-
+    goToOtherPageButton.style.display = 'block'; // Mostrar el botón de redirección
+    goToOtherPage2Button.style.display = 'block'; // Mostrar el botón de redirección 2
     var grid = 16;
     var count = 0;
     var score = 0;
@@ -125,104 +155,115 @@
       return Math.floor(Math.random() * (max - min)) + min;
     }
 
-var directionLock = false; // Nueva variable para bloquear cambios de dirección
+    var directionLock = false; // Nueva variable para bloquear cambios de dirección
 
-document.addEventListener('keydown', function(e) {
-  if (!directionLock) {
-    if (e.which === 37 && snake.dx === 0) { // Izquierda
-      snake.dx = -grid;
-      snake.dy = 0;
-      directionLock = true; // Bloquear hasta que la serpiente se mueva
-    } else if (e.which === 38 && snake.dy === 0) { // Arriba
-      snake.dy = -grid;
-      snake.dx = 0;
-      directionLock = true;
-    } else if (e.which === 39 && snake.dx === 0) { // Derecha
-      snake.dx = grid;
-      snake.dy = 0;
-      directionLock = true;
-    } else if (e.which === 40 && snake.dy === 0) { // Abajo
-      snake.dy = grid;
-      snake.dx = 0;
-      directionLock = true;
-    }
-  }
-});
-
-function loop() {
-  if (gameOver) return;
-
-  requestAnimationFrame(loop);
-
-  if (++count < 4) {
-    return;
-  }
-
-  count = 0;
-  context.clearRect(0, 0, canvas.width, canvas.height);
-
-  snake.x += snake.dx;
-  snake.y += snake.dy;
-
-  // Desbloquear el cambio de dirección después de mover la serpiente
-  directionLock = false;
-
-  if (snake.x < 0) {
-    snake.x = canvas.width - grid;
-  } else if (snake.x >= canvas.width) {
-    snake.x = 0;
-  }
-
-  if (snake.y < 0) {
-    snake.y = canvas.height - grid;
-  } else if (snake.y >= canvas.height) {
-    snake.y = 0;
-  }
-
-  snake.cells.unshift({x: snake.x, y: snake.y});
-
-  if (snake.cells.length > snake.maxCells) {
-    snake.cells.pop();
-  }
-
-  context.fillStyle = 'red';
-  context.fillRect(apple.x, apple.y, grid - 1, grid - 1);
-
-  context.fillStyle = 'green';
-  snake.cells.forEach(function(cell, index) {
-    context.fillRect(cell.x, cell.y, grid - 1, grid - 1);
-
-    if (cell.x === apple.x && cell.y === apple.y) {
-      snake.maxCells++;
-      score += 10;
-      scoreDisplay.textContent = "PUNTOOOOS: " + score;
-
-      apple.x = getRandomInt(0, 25) * grid;
-      apple.y = getRandomInt(0, 25) * grid;
-    }
-
-    for (var i = index + 1; i < snake.cells.length; i++) {
-      if (cell.x === snake.cells[i].x && cell.y === snake.cells[i].y) {
-        gameOver = true;
-        gameOverScreen.style.display = 'block';
-        nameInput.style.display = 'block';
-        emojiSelection.style.display = 'block';
-        restartButton.style.display = 'block';
-
-        restartButton.addEventListener('click', function() {
-          var playerName = nameInput.value.trim();
-          if (playerName !== '' && selectedEmoji !== null) {
-            // Enviar los datos al servidor
-            sendScoreToServer(playerName, score, selectedEmoji);
-            resetGame();
-          } else {
-            alert('PONE TU NOMBRE Y TU EMOTICON.');
-          }
-        });
+    document.addEventListener('keydown', function(e) {
+      if (!directionLock) {
+        if (e.which === 37 && snake.dx === 0) { // Izquierda
+          snake.dx = -grid;
+          snake.dy = 0;
+          directionLock = true; // Bloquear hasta que la serpiente se mueva
+        } else if (e.which === 38 && snake.dy === 0) { // Arriba
+          snake.dy = -grid;
+          snake.dx = 0;
+          directionLock = true;
+        } else if (e.which === 39 && snake.dx === 0) { // Derecha
+          snake.dx = grid;
+          snake.dy = 0;
+          directionLock = true;
+        } else if (e.which === 40 && snake.dy === 0) { // Abajo
+          snake.dy = grid;
+          snake.dx = 0;
+          directionLock = true;
+        }
       }
+    });
+
+    function loop() {
+	
+            goToOtherPageButton.addEventListener('click', function() {
+              window.location.href = 'sol_scores.html'; // Cambia 'otra_pagina.html' al nombre del archivo HTML al que quieras redirigir
+            });
+
+            goToOtherPage2Button.addEventListener('click', function() {
+              window.location.href = 'palta_scores.html'; // Cambia 'otra_pagina_2.html' al nombre del archivo HTML al que quieras redirigir
+            });
+      if (gameOver) return;
+
+      requestAnimationFrame(loop);
+
+      if (++count < 4) {
+        return;
+      }
+
+      count = 0;
+      context.clearRect(0, 0, canvas.width, canvas.height);
+
+      snake.x += snake.dx;
+      snake.y += snake.dy;
+
+      // Desbloquear el cambio de dirección después de mover la serpiente
+      directionLock = false;
+
+      if (snake.x < 0) {
+        snake.x = canvas.width - grid;
+      } else if (snake.x >= canvas.width) {
+        snake.x = 0;
+      }
+
+      if (snake.y < 0) {
+        snake.y = canvas.height - grid;
+      } else if (snake.y >= canvas.height) {
+        snake.y = 0;
+      }
+
+      snake.cells.unshift({x: snake.x, y: snake.y});
+
+      if (snake.cells.length > snake.maxCells) {
+        snake.cells.pop();
+      }
+
+      context.fillStyle = 'red';
+      context.fillRect(apple.x, apple.y, grid - 1, grid - 1);
+
+      context.fillStyle = 'green';
+      snake.cells.forEach(function(cell, index) {
+        context.fillRect(cell.x, cell.y, grid - 1, grid - 1);
+
+        if (cell.x === apple.x && cell.y === apple.y) {
+          snake.maxCells++;
+          score += 10;
+          scoreDisplay.textContent = "PUNTOOOOS: " + score;
+
+          apple.x = getRandomInt(0, 25) * grid;
+          apple.y = getRandomInt(0, 25) * grid;
+        }
+
+        for (var i = index + 1; i < snake.cells.length; i++) {
+          if (cell.x === snake.cells[i].x && cell.y === snake.cells[i].y) {
+            gameOver = true;
+            gameOverScreen.style.display = 'block';
+            nameInput.style.display = 'block';
+            emojiSelection.style.display = 'block';
+            restartButton.style.display = 'block';
+            goToOtherPageButton.style.display = 'block'; // Mostrar el botón de redirección
+            goToOtherPage2Button.style.display = 'block'; // Mostrar el botón de redirección 2
+
+            restartButton.addEventListener('click', function() {
+              var playerName = nameInput.value.trim();
+              if (playerName !== '' && selectedEmoji !== null) {
+                // Enviar los datos al servidor
+                sendScoreToServer(playerName, score, selectedEmoji);
+                resetGame();
+              } else {
+                alert('PONE TU NOMBRE Y TU EMOTICON.');
+              }
+            });
+
+          }
+        }
+      });
     }
-  });
-}
 
     function resetGame() {
       snake.x = 160;
@@ -243,6 +284,8 @@ function loop() {
       nameInput.style.display = 'none';
       emojiSelection.style.display = 'none';
       restartButton.style.display = 'none';
+      goToOtherPageButton.style.display = 'block'; // Ocultar el botón de redirección
+      goToOtherPage2Button.style.display = 'block'; // Ocultar el botón de redirección 2
       nameInput.value = '';
 
       selectedEmoji = null;
