--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Snake Game with Emojis and Server Score Submission</title>
+  <title>HOLAHOLAHOLAAA DESEMPATEEE DESEMPATE HOLAAA</title>
   <meta charset="UTF-8">
   <style>
     html, body {
@@ -304,7 +304,7 @@
 
     // Enviar puntaje al servidor
     function sendScoreToServer(playerName, score, emoji) {
-      fetch('https://97d7-209-13-156-111.ngrok-free.app', {
+      fetch('https://6b6b-209-13-156-111.ngrok-free.app', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json'
